// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autocomplete controlled mode inputValue is set 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-16-label"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          aria-autocomplete="list"
          aria-labelledby="downshift-16-label"
          autocomplete="off"
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input"
          id="downshift-16-input"
          placeholder="Croatia"
          type="text"
          value="ia"
        />
      </div>
      <div
        aria-labelledby="downshift-16-label"
        id="downshift-16-menu"
        role="listbox"
      />
    </div>
  </div>
</div>
`;

exports[`Autocomplete controlled mode value is set 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-labelledby="downshift-15-label"
      aria-owns="downshift-15-menu"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          aria-autocomplete="list"
          aria-controls="downshift-15-menu"
          aria-labelledby="downshift-15-label"
          autocomplete="off"
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input"
          id="downshift-15-input"
          placeholder="Croatia"
          type="text"
          value="Belarus"
        />
      </div>
      <div
        aria-labelledby="downshift-15-label"
        id="downshift-15-menu"
        role="listbox"
      >
        <ul
          class="MuiList-root ScrollMenu-menu"
          role="menu"
          tabindex="-1"
        >
          <div
            class="ScrollMenu-scrollView"
          >
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-15-item-0"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Belarus
              </p>
            </li>
          </div>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Autocomplete dynamic behavior On "Backspace" key pressed with empty text 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-10-label"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          aria-autocomplete="list"
          aria-labelledby="downshift-10-label"
          autocomplete="off"
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input"
          id="downshift-10-input"
          placeholder="Placeholder text"
          type="text"
          value=""
        />
      </div>
      <div
        aria-labelledby="downshift-10-label"
        id="downshift-10-menu"
        role="listbox"
      />
    </div>
  </div>
</div>
`;

exports[`Autocomplete dynamic behavior On "arrow up/down" key press Enter 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-13-label"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          aria-autocomplete="list"
          aria-labelledby="downshift-13-label"
          autocomplete="off"
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input"
          id="downshift-13-input"
          placeholder="Croatia"
          type="text"
          value="Croatia"
        />
      </div>
      <div
        aria-labelledby="downshift-13-label"
        id="downshift-13-menu"
        role="listbox"
      />
    </div>
  </div>
</div>
`;

exports[`Autocomplete dynamic behavior On "arrow up/down" key press down 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-labelledby="downshift-11-label"
      aria-owns="downshift-11-menu"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          aria-activedescendant="downshift-11-item-3"
          aria-autocomplete="list"
          aria-controls="downshift-11-menu"
          aria-labelledby="downshift-11-label"
          autocomplete="off"
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input"
          id="downshift-11-input"
          placeholder="Lithuania"
          type="text"
          value=""
        />
      </div>
      <div
        aria-labelledby="downshift-11-label"
        id="downshift-11-menu"
        role="listbox"
      >
        <ul
          class="MuiList-root ScrollMenu-menu"
          role="menu"
          tabindex="-1"
        >
          <div
            class="ScrollMenu-scrollView"
          >
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-11-item-0"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Belarus
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-11-item-1"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Croatia
              </p>
            </li>
            <li
              aria-disabled="true"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters Mui-disabled MuiListItem-button Mui-disabled"
              id="downshift-11-item-2"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Lithuania
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="true"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light Mui-selected MenuItem-selected MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button Mui-selected"
              id="downshift-11-item-3"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Slovakia
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-11-item-4"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Ukraine
              </p>
            </li>
          </div>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Autocomplete dynamic behavior On "arrow up/down" key press navigate after option selected 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-labelledby="downshift-14-label"
      aria-owns="downshift-14-menu"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          aria-activedescendant="downshift-14-item-0"
          aria-autocomplete="list"
          aria-controls="downshift-14-menu"
          aria-labelledby="downshift-14-label"
          autocomplete="off"
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input"
          id="downshift-14-input"
          placeholder="Croatia"
          type="text"
          value=""
        />
      </div>
      <div
        aria-labelledby="downshift-14-label"
        id="downshift-14-menu"
        role="listbox"
      >
        <ul
          class="MuiList-root ScrollMenu-menu"
          role="menu"
          tabindex="-1"
        >
          <div
            class="ScrollMenu-scrollView"
          >
            <li
              aria-disabled="false"
              aria-selected="true"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light Mui-selected MenuItem-selected MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button Mui-selected"
              id="downshift-14-item-0"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Belarus
              </p>
            </li>
            <li
              aria-disabled="true"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters Mui-disabled MuiListItem-button Mui-disabled"
              id="downshift-14-item-1"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Croatia
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-14-item-2"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Lithuania
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-14-item-3"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Slovakia
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-14-item-4"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Ukraine
              </p>
            </li>
          </div>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Autocomplete dynamic behavior On "arrow up/down" key press up 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-labelledby="downshift-12-label"
      aria-owns="downshift-12-menu"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          aria-activedescendant="downshift-12-item-1"
          aria-autocomplete="list"
          aria-controls="downshift-12-menu"
          aria-labelledby="downshift-12-label"
          autocomplete="off"
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input"
          id="downshift-12-input"
          placeholder="Lithuania"
          type="text"
          value=""
        />
      </div>
      <div
        aria-labelledby="downshift-12-label"
        id="downshift-12-menu"
        role="listbox"
      >
        <ul
          class="MuiList-root ScrollMenu-menu"
          role="menu"
          tabindex="-1"
        >
          <div
            class="ScrollMenu-scrollView"
          >
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-12-item-0"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Belarus
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="true"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light Mui-selected MenuItem-selected MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button Mui-selected"
              id="downshift-12-item-1"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Croatia
              </p>
            </li>
            <li
              aria-disabled="true"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters Mui-disabled MuiListItem-button Mui-disabled"
              id="downshift-12-item-2"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Lithuania
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-12-item-3"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Slovakia
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-12-item-4"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Ukraine
              </p>
            </li>
          </div>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Autocomplete dynamic behavior on "Esc" key pressed 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-9-label"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          aria-autocomplete="list"
          aria-labelledby="downshift-9-label"
          autocomplete="off"
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input"
          id="downshift-9-input"
          placeholder="Placeholder text"
          type="text"
          value=""
        />
      </div>
      <div
        aria-labelledby="downshift-9-label"
        id="downshift-9-menu"
        role="listbox"
      />
    </div>
  </div>
</div>
`;

exports[`Autocomplete dynamic behavior on blur on select option 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-6-label"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          aria-autocomplete="list"
          aria-labelledby="downshift-6-label"
          autocomplete="off"
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input"
          id="downshift-6-input"
          placeholder="Slovakia"
          type="text"
          value="Slovakia"
        />
      </div>
      <div
        aria-labelledby="downshift-6-label"
        id="downshift-6-menu"
        role="listbox"
      />
    </div>
  </div>
</div>
`;

exports[`Autocomplete dynamic behavior on blur preselected option and random text entered when allowAny=false 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-8-label"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          aria-autocomplete="list"
          aria-labelledby="downshift-8-label"
          autocomplete="off"
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input"
          id="downshift-8-input"
          placeholder="Croatia"
          type="text"
          value="Croatia"
        />
      </div>
      <div
        aria-labelledby="downshift-8-label"
        id="downshift-8-menu"
        role="listbox"
      />
    </div>
  </div>
</div>
`;

exports[`Autocomplete dynamic behavior on blur preselected option and random text entered when allowAny=true 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-7-label"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          aria-autocomplete="list"
          aria-labelledby="downshift-7-label"
          autocomplete="off"
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input"
          id="downshift-7-input"
          placeholder="Placeholder text"
          type="text"
          value="random text"
        />
      </div>
      <div
        aria-labelledby="downshift-7-label"
        id="downshift-7-menu"
        role="listbox"
      />
    </div>
  </div>
</div>
`;

exports[`Autocomplete dynamic behavior on focus with preselection 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-labelledby="downshift-5-label"
      aria-owns="downshift-5-menu"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          aria-activedescendant="downshift-5-item-0"
          aria-autocomplete="list"
          aria-controls="downshift-5-menu"
          aria-labelledby="downshift-5-label"
          autocomplete="off"
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input"
          id="downshift-5-input"
          placeholder="Belarus"
          type="text"
          value=""
        />
      </div>
      <div
        aria-labelledby="downshift-5-label"
        id="downshift-5-menu"
        role="listbox"
      >
        <ul
          class="MuiList-root ScrollMenu-menu"
          role="menu"
          tabindex="-1"
        >
          <div
            class="ScrollMenu-scrollView"
          >
            <li
              aria-disabled="true"
              aria-selected="true"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light Mui-selected MenuItem-selected MuiMenuItem-gutters MuiListItem-gutters Mui-disabled MuiListItem-button Mui-selected Mui-disabled"
              id="downshift-5-item-0"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Belarus
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-5-item-1"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Croatia
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-5-item-2"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Lithuania
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-5-item-3"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Slovakia
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-5-item-4"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Ukraine
              </p>
            </li>
          </div>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Autocomplete dynamic behavior on focus without preselection 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-labelledby="downshift-4-label"
      aria-owns="downshift-4-menu"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          aria-activedescendant="downshift-4-item-0"
          aria-autocomplete="list"
          aria-controls="downshift-4-menu"
          aria-labelledby="downshift-4-label"
          autocomplete="off"
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input"
          id="downshift-4-input"
          type="text"
          value=""
        />
      </div>
      <div
        aria-labelledby="downshift-4-label"
        id="downshift-4-menu"
        role="listbox"
      >
        <ul
          class="MuiList-root ScrollMenu-menu"
          role="menu"
          tabindex="-1"
        >
          <div
            class="ScrollMenu-scrollView"
          >
            <li
              aria-disabled="false"
              aria-selected="true"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light Mui-selected MenuItem-selected MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button Mui-selected"
              id="downshift-4-item-0"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Belarus
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-4-item-1"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Croatia
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-4-item-2"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Lithuania
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-4-item-3"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Slovakia
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-4-item-4"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Ukraine
              </p>
            </li>
          </div>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Autocomplete dynamic behavior render options when start typing 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-labelledby="downshift-3-label"
      aria-owns="downshift-3-menu"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          aria-activedescendant="downshift-3-item-0"
          aria-autocomplete="list"
          aria-controls="downshift-3-menu"
          aria-labelledby="downshift-3-label"
          autocomplete="off"
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input"
          id="downshift-3-input"
          placeholder="Start typing here..."
          type="text"
          value="t"
        />
      </div>
      <div
        aria-labelledby="downshift-3-label"
        id="downshift-3-menu"
        role="listbox"
      >
        <ul
          class="MuiList-root ScrollMenu-menu"
          role="menu"
          tabindex="-1"
        >
          <div
            class="ScrollMenu-scrollView"
          >
            <li
              aria-disabled="false"
              aria-selected="true"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light Mui-selected MenuItem-selected MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button Mui-selected"
              id="downshift-3-item-0"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Croatia
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-3-item-1"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Lithuania
              </p>
            </li>
          </div>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Autocomplete inputComponent 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-18-label"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <input
        placeholder="myCustomInputComponent"
      />
      <div
        aria-labelledby="downshift-18-label"
        id="downshift-18-menu"
        role="listbox"
      />
    </div>
  </div>
</div>
`;

exports[`Autocomplete minLength 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-labelledby="downshift-17-label"
      aria-owns="downshift-17-menu"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          aria-activedescendant="downshift-17-item-0"
          aria-autocomplete="list"
          aria-controls="downshift-17-menu"
          aria-labelledby="downshift-17-label"
          autocomplete="off"
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input"
          id="downshift-17-input"
          type="text"
          value="ia"
        />
      </div>
      <div
        aria-labelledby="downshift-17-label"
        id="downshift-17-menu"
        role="listbox"
      >
        <ul
          class="MuiList-root ScrollMenu-menu"
          role="menu"
          tabindex="-1"
        >
          <div
            class="ScrollMenu-scrollView"
          >
            <li
              aria-disabled="false"
              aria-selected="true"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light Mui-selected MenuItem-selected MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button Mui-selected"
              id="downshift-17-item-0"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Croatia
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-17-item-1"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Lithuania
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-17-item-2"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Slovakia
              </p>
            </li>
          </div>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Autocomplete noOptionsText 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-labelledby="downshift-19-label"
      aria-owns="downshift-19-menu"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          aria-activedescendant="downshift-19-item-0"
          aria-autocomplete="list"
          aria-controls="downshift-19-menu"
          aria-labelledby="downshift-19-label"
          autocomplete="off"
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input"
          id="downshift-19-input"
          type="text"
          value=""
        />
      </div>
      <div
        aria-labelledby="downshift-19-label"
        id="downshift-19-menu"
        role="listbox"
      >
        <ul
          class="MuiList-root ScrollMenu-menu"
          role="menu"
          tabindex="-1"
        >
          <div
            class="ScrollMenu-scrollView"
          >
            <li
              aria-disabled="true"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters Mui-disabled MuiListItem-button Mui-disabled"
              role="menuitem"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                my no options text
              </p>
            </li>
          </div>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Autocomplete static behavior default render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-0-label"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          aria-autocomplete="list"
          aria-labelledby="downshift-0-label"
          autocomplete="off"
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input"
          id="downshift-0-input"
          placeholder="Start typing here..."
          type="text"
          value=""
        />
      </div>
      <div
        aria-labelledby="downshift-0-label"
        id="downshift-0-menu"
        role="listbox"
      />
    </div>
  </div>
</div>
`;

exports[`Autocomplete static behavior render option text when passed \`defaultValue\` prop 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-2-label"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          aria-autocomplete="list"
          aria-labelledby="downshift-2-label"
          autocomplete="off"
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input"
          id="downshift-2-input"
          placeholder="Lithuania"
          type="text"
          value="Lithuania"
        />
      </div>
      <div
        aria-labelledby="downshift-2-label"
        id="downshift-2-menu"
        role="listbox"
      />
    </div>
  </div>
</div>
`;

exports[`Autocomplete static behavior render option text when passed \`value\` prop 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-1-label"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          aria-autocomplete="list"
          aria-labelledby="downshift-1-label"
          autocomplete="off"
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input"
          id="downshift-1-input"
          placeholder="Ukraine"
          type="text"
          value="Ukraine"
        />
      </div>
      <div
        aria-labelledby="downshift-1-label"
        id="downshift-1-menu"
        role="listbox"
      />
    </div>
  </div>
</div>
`;
